archive/dreamflow/dreamflow-scheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dreamflow-scheduler
  namespace: galaxy
spec:
  replicas: 0
  selector:
    matchLabels:
      name: dreamflow-scheduler
  template:
    metadata:
      labels:
        name: dreamflow-scheduler
    spec:
      serviceAccountName: dreamflow
      containers:
        - name: dreamflow-scheduler
          image: edrodefeld/dreamflow
          imagePullPolicy: IfNotPresent
          args: ["scheduler"]
