archive/dreamflow/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dreamflow-ingress
  namespace: galaxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: galaxy-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: dreamflow.pinwheel.fan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dreamflow-webserver-service
                port:
                  number: 8080
    - host: flower.pinwheel.fan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dreamflow-flower-service
                port:
                  number: 5555
  tls:
    - secretName: dreamflow-tls
      hosts:
        - dreamflow.pinwheel.fan
    - secretName: flower-tls
      hosts:
        - flower.pinwheel.fan
